--- a/.travis.yml
+++ b/.travis.yml
@@ -39,8 +39,8 @@ script:
   - yarn test
   - ./mvnw verify -Pprod -DskipTests
 after_success:
-  - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-  - export REPO=antoniohgarcia/sampleapp
+  - docker login -u $DOCKER_USER -p $DOCKER_PASS
+  - export REPO=antoniohgarcia/sampleapplication
   - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH ; fi`
   - docker build -f Dockerfile -t $REPO:$COMMIT .
   - docker tag $REPO:$COMMIT $REPO:$TAG
