--- a/.travis.yml
+++ b/.travis.yml
@@ -42,11 +42,11 @@ script:
 before_deploy:
   - docker login -u "$DOCKER_USER" -p "$DOCKER_PASS"
   - git_sha="$(git rev-parse --short HEAD)"
-  - docker tag "$IMAGE_NAME" "antoniohgarcia/${IMAGE_NAME}:develop"
-  - docker tag "$IMAGE_NAME" "antoniohgarcia/${IMAGE_NAME}:${git_sha}-develop"  
+  - docker tag "$IMAGE_NAME" "antoniohgarcia/${IMAGE_NAME}:latest"
+  - docker tag "$IMAGE_NAME" "antoniohgarcia/${IMAGE_NAME}:${git_sha}-latest"  
 deploy:
   provider: script
-  script: docker push "antoniohgarcia/${IMAGE_NAME}:develop" && docker push "antoniohgarcia/${IMAGE_NAME}:${git_sha}-develop"
+  script: docker push "antoniohgarcia/${IMAGE_NAME}:latest" && docker push "antoniohgarcia/${IMAGE_NAME}:${git_sha}-latest"
   on:
 branch: develop
 
