--- a/src/main/docker/app-develop.yml
+++ b/src/main/docker/app-develop.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
     sampleapplication-app:
-        image: antoniohgarcia/sampleapplication:develop
+        image: index.docker.io/antoniohgarcia/sampleapplication:develop
         environment:
             - SPRING_PROFILES_ACTIVE=prod,swagger
             - SPRING_DATASOURCE_URL=jdbc:mysql://sampleapplication-mysql:3306/sampleapplication?useUnicode=true&characterEncoding=utf8&useSSL=false
@@ -10,6 +10,12 @@ services:
             - SPRING_CLOUD_STREAM_KAFKA_BINDER_ZK_NODES=zookeeper
         ports:
             - 8080:8080
+    watchtower:
+    image: v2tec/watchtower
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - /root/.docker/config.json:/config.json
+    command: --interval 30
     sampleapplication-mysql:
         extends:
             file: mysql.yml
