--- a/src/main/docker/app-develop.yml
+++ b/src/main/docker/app-develop.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
     sampleapplication-app:
-        image: antoniohgarcia/sampleapplication:develop
+        image: index.docker.io/antoniohgarcia/sampleapplication:develop
         environment:
             - SPRING_PROFILES_ACTIVE=prod,swagger
             - SPRING_DATASOURCE_URL=jdbc:mysql://sampleapplication-mysql:3306/sampleapplication?useUnicode=true&characterEncoding=utf8&useSSL=false
@@ -13,8 +13,8 @@ services:
     watchtower:
     image: v2tec/watchtower
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-      - /root/.docker/config.json:/config.json
+    - /var/run/docker.sock:/var/run/docker.sock
+    - /root/.docker/config.json:/config.json
     command: --interval 30
     sampleapplication-mysql:
         extends:
